--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ description: Adventures in deep learning
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: sam.leroux[AT]gmail[DOT]com
   facebook:
   flickr:
-  github: 
+  github: SamLeroux
   instagram:
   linkedin:
   pinterest:
